--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-validation": "^3.0.7",
+    "reactstrap": "^9.0.0",
     "validator": "^12.2.0"
   },
   "scripts": {
