--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^5.1.3",
     "react": "^16.13.0",
+    "react-bootstrap": "^2.0.2",
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
