--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^16.13.0",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^16.13.0",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-validation": "^3.0.7",
